<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Guardar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-35dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="310dp"
                android:layout_marginEnd="9dp"
                app:layout_constraintEnd_toStartOf="@+id/PriceTIL"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_compass" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="9dp"
                app:layout_constraintEnd_toStartOf="@+id/NameTIL"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <Spinner
                android:id="@+id/spinner"
                style="@style/spinner"
                android:layout_width="181dp"
                android:layout_height="35dp"
                android:layout_marginTop="400dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                style="@style/Form"
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="470dp"
                android:text="@string/incluye_funda"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="89dp"
                android:layout_height="77dp"
                android:layout_marginTop="550dp"
                android:background="@android:drawable/ic_menu_crop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button4"
                android:layout_width="66dp"
                android:layout_height="55dp"
                android:layout_marginTop="670dp"
                android:layout_marginBottom="20dp"
                android:background="#000000"
                android:backgroundTint="#090909"
                app:icon="@android:drawable/ic_menu_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/delete"
                android:layout_width="66dp"
                android:layout_height="55dp"
                android:layout_marginStart="86dp"
                android:layout_marginTop="670dp"
                android:layout_marginBottom="20dp"
                android:background="#000000"
                android:backgroundTint="#090909"
                app:icon="@android:drawable/ic_menu_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button4"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button5"
                android:layout_width="66dp"
                android:layout_height="55dp"
                android:layout_marginTop="670dp"
                android:layout_marginEnd="86dp"
                android:layout_marginBottom="20dp"
                android:background="#000000"
                android:backgroundTint="#090909"
                app:icon="@android:drawable/ic_menu_close_clear_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button4"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PriceTIL"
                android:layout_width="250dp"
                android:layout_height="59dp"
                android:layout_marginTop="300dp"
                app:boxBackgroundColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Form"
                    android:id="@+id/PriceET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateeTIL"
                android:layout_width="250dp"
                android:layout_height="59dp"
                android:layout_marginTop="230dp"
                app:boxBackgroundColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Form"
                    android:id="@+id/DescriptionET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripci_n"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/DateTIL"
                android:layout_width="250dp"
                android:layout_height="59dp"
                android:layout_marginTop="160dp"
                app:boxBackgroundColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Form"
                    android:id="@+id/DateET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cuando_lo_adquiriste"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NameTIL"
                android:layout_width="250dp"
                android:layout_height="59dp"
                android:layout_marginTop="90dp"
                app:boxBackgroundColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Form"
                    android:id="@+id/NameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qu_vas_a_vender"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="9dp"
                app:layout_constraintEnd_toStartOf="@+id/dateeTIL"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_info_details" />

            <ImageButton
                android:id="@+id/DateButton"
                android:layout_width="34dp"
                android:layout_height="30dp"
                android:layout_marginTop="170dp"
                android:layout_marginEnd="9dp"
                android:background="#00FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/DateTIL"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_my_calendar"
                tools:srcCompat="@android:drawable/ic_menu_my_calendar" />

            <ImageButton
                android:id="@+id/ButtonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="400dp"
                android:background="#00FFFFFF"
                app:layout_constraintStart_toEndOf="@+id/spinner"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_add" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>